feat: 로또 매니저 클래스 및 출력 코드 작성